# tum-ai-brain-mri-image-classification

./: .python-version  LICENSE  README.md  pyproject.toml
src/: file_manager.py  modeling.ipynb  predict_v0.py  preprocessing.ipynb
