[tool.poetry]
name = "brain-mri-classification"
version = "0.1.0"
description = ""
authors = ["Michael Fuest <ge69fuh@mytum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0, <3.12.0"
pandas = "^2.0.2"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
imutils = "^0.5.4"
tensorflow-macos = "^2.12.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
